ajuste conexão sql server

--- a/Curso VS2017/03_MVC/Projeto02_EventosMVC/Projeto02_EventosMVC/Web.config
+++ b/Curso VS2017/03_MVC/Projeto02_EventosMVC/Projeto02_EventosMVC/Web.config
@@ -45,9 +45,9 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DBEVENTOSEntities" connectionString="metadata=res://*/Models.EntityModel.csdl|res://*/Models.EntityModel.ssdl|res://*/Models.EntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DBEVENTOS;persist security info=True;user id=sa;password=Imp@ct@;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ContatosEntities" connectionString="Password=Imp@ct@;Persist Security Info=True;User ID=sa;Initial Catalog=DBCONTATOS;Data Source=." providerName="System.Data.SqlClient" />
-    <add name="DefaultConnection" connectionString="Password=Imp@ct@;Persist Security Info=True;User ID=sa;Initial Catalog=DBUSUARIOS;Data Source=." providerName="System.Data.SqlClient" />
+    <add name="DBEVENTOSEntities" connectionString="metadata=res://*/Models.EntityModel.csdl|res://*/Models.EntityModel.ssdl|res://*/Models.EntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-UP5I9EV\SQLEXPRESS;initial catalog=DBEVENTOS;persist security info=True;user id=sa;password=masterkey;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ContatosEntities" connectionString="Password=masterkey;Persist Security Info=True;User ID=sa;Initial Catalog=DBCONTATOS;Data Source=DESKTOP-UP5I9EV\SQLEXPRESS" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Password=masterkey;Persist Security Info=True;User ID=sa;Initial Catalog=DBUSUARIOS;Data Source=DESKTOP-UP5I9EV\SQLEXPRESS" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
